fixed style bleed to footer and looped video

--- a/resources/CSS/style.css
+++ b/resources/CSS/style.css
@@ -29,7 +29,7 @@ h2 {
     font-weight: 300;
 }
 
-p {
+body p {
     font-family: verdana;
     font-size: 21px;
     color: gray;
